# cvat-remote-inference-server

./: LICENSE  README.md  main.py  orchestrator.sh  pyproject.toml
config/: models.yaml
config/cvat/: template.yaml
scripts/: generate_nuclio_function.py
serverless/: deploy.sh
serverless/yolov12n/: function.yaml  main.py
src/: __init__.py
src/api/: __init__.py  app.py
src/api/routes/: __init__.py  inference.py
src/api/schemas/: __init__.py  requests.py
src/core/: __init__.py  config.py  exceptions.py  interfaces.py
src/models/: __init__.py
src/models/yolov12n/: __init__.py  detector.py
src/services/: __init__.py  model_loader.py  model_runner.py  orchestrator.py
src/utils/: __init__.py  image.py  model_utils.py
tests/: README.md  __init__.py  test_api.py  test_orchestrator.py
